--- a/frontend/src/html/includes/content/overlayView.html
+++ b/frontend/src/html/includes/content/overlayView.html
@@ -25,7 +25,7 @@
 			<p><span class="disc">WIFI</span> <span class="mbs">mbps</span> <span class="wifi">{{ data.wifi }}</span><img src="../assets/images/icons/wifi-sm.svg" class="wifi__icon"></p>
 			<p><span class="disc">COST P.M.</span> <span class="cost">{{ data.cost }}</span><img src="../assets/images/icons/euro-sm.svg" class="euro__icon"></p>
 		</div>
-		<a class="button--info">open window</a>
+		<a class="button--info">view destination</a>
 	</section>	
 </template>
 
