--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import 'modules/overview';
 @import 'modules/overviewsmall';
 @import 'modules/overviewco';
+@import 'modules/splashpage';
 
 // elements
 @import 'elements/buttons';
