--- a/frontend/src/sass/modules/_filter.scss
+++ b/frontend/src/sass/modules/_filter.scss
@@ -1,7 +1,7 @@
 .filter {
 	background-color: $color-yellow;
 	box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50);
-	overflow: hidden;
+	height: 130px;
 	padding: 20px 40px;
 	width: 100%;
 	z-index: 2;
@@ -54,6 +54,46 @@
 				top: -13px;
 				right: -13px;
 				position: absolute;
+			}
+
+		}
+
+		.filter__infobox {
+			background-color: $color-white;
+			box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50);
+			width: 172px;
+			padding: 0 10px;
+			top: 0;
+
+			&:after {
+				border-bottom-color: $color-white;
+				border-width: 7px;
+				margin-left: -7px;
+			}
+		}
+
+		&:hover .filter__infobox {
+			opacity: 1;
+			transform: translateY(0px);
+			visibility: visible;
+		}
+
+		.filter__infbox--item {
+			border-top: 2px solid $color-yellow-dark;
+			margin-top: 10px;
+			padding-top: 5px;
+			overflow: hidden;
+			
+			&:first-child {
+				border: none;
+			}
+
+			span {
+				float: left;
+			}
+
+			.close {
+				float: right;
 			}
 
 		}
