saved items :active

--- a/frontend/src/html/includes/content/filters.html
+++ b/frontend/src/html/includes/content/filters.html
@@ -3,25 +3,25 @@
 	<div class="filter__holder">
 		
 		<div class="filter__button-holder">
-			<a class="button"> saved items <span>3</span></a>
-			<div class="filter__infobox">
+			<a class="button test"> saved items <span>3</span></a>
+			<div class="saved__infobox">
 				
-				<div class="filter__infbox--item">
+				<div class="saved__infobox--item">
 					<span data-id="2">Amsterdam</span>
 					<a data-id="2" class="close"><img src="../assets/images/icons/cross-button.png"></a>
 				</div>
 
-				<div class="filter__infbox--item">
+				<div class="saved__infobox--item">
 					<span data-id="2">Amsterdam</span>
 					<a data-id="2" class="close"><img src="../assets/images/icons/cross-button.png"></a>
 				</div>
 
-				<div class="filter__infbox--item">
+				<div class="saved__infobox--item">
 					<span data-id="2">Amsterdam</span>
 					<a data-id="2" class="close"><img src="../assets/images/icons/cross-button.png"></a>
 				</div>
 
-				<div class="filter__infbox--item">
+				<div class="saved__infobox--item">
 					<span data-id="2">Amsterdam</span>
 					<a data-id="2" class="close"><img src="../assets/images/icons/cross-button.png"></a>
 				</div>
