--- a/frontend/src/sass/modules/_filter.scss
+++ b/frontend/src/sass/modules/_filter.scss
@@ -57,45 +57,65 @@
 			}
 
 		}
-
-		.filter__infobox {
+	
+		.saved__infobox {
+			position: absolute;
+			top: 45px;
+			left: -35px;
+			width: 172px;
+			z-index: 999;
+			padding: 0 10px;
 			background-color: $color-white;
 			box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.50);
-			width: 172px;
-			padding: 0 10px;
-			top: 0;
+			border-radius: 4px;
+			opacity: 0;
+			transform: translateY(10px);
+			visibility: hidden;
 
 			&:after {
-				border-bottom-color: $color-white;
-				border-width: 7px;
-				margin-left: -7px;
+				content: "";
+				position: absolute;
+				left: 77px;
+				top: -18px;
+				width: 0;
+				height: 0;
+				border-right: 9px solid transparent;
+				border-bottom: 18px solid $color-white;
+				border-left: 9px solid transparent;
+			}
+
+			.saved__infobox--item {
+				
+				border-top: 2px solid $color-yellow-dark;
+				padding-top: 12px;
+				padding-bottom: 4px;
+				overflow: hidden;
+				padding-left: 7px;
+				font-size: 12px;
+				
+				&:first-child {
+					border: none;
+					padding-top: 14px;
+				}
+
+				span {
+					float: left;
+				}
+
+				.close {
+					float: right;
+					margin-top: 0px;
+					cursor: pointer;
+				}
+
 			}
 		}
 
-		&:hover .filter__infobox {
+		&:active .saved__infobox {
+			transition: all .3s;
 			opacity: 1;
 			transform: translateY(0px);
 			visibility: visible;
-		}
-
-		.filter__infbox--item {
-			border-top: 2px solid $color-yellow-dark;
-			margin-top: 10px;
-			padding-top: 5px;
-			overflow: hidden;
-			
-			&:first-child {
-				border: none;
-			}
-
-			span {
-				float: left;
-			}
-
-			.close {
-				float: right;
-			}
-
 		}
 
 	}
