--- a/frontend/src/html/includes/templates/infobox-tmpl.html
+++ b/frontend/src/html/includes/templates/infobox-tmpl.html
@@ -1,6 +1,6 @@
 <template class="infobox-template"> 
 
-	<div class="infobox__holder infobox__holder--cross"> 
+	<div data-box-id="{{ data.id }}" class="infobox__holder infobox__holder--cross"> 
 
 		<div class="infobox__item infobox__item--center">
 
