added saved items

--- a/frontend/src/html/includes/content/filters.html
+++ b/frontend/src/html/includes/content/filters.html
@@ -3,29 +3,9 @@
 	<div class="filter__holder">
 		
 		<div class="filter__button-holder">
-			<a class="button test"> saved items <span>3</span></a>
+			<a class="button">saved items<span class="button__number">0</span></a>
 			<div class="saved__infobox">
-				
-				<div class="saved__infobox--item">
-					<span data-id="2">Amsterdam</span>
-					<a data-id="2" class="close"><img src="../assets/images/icons/cross-button.png"></a>
-				</div>
-
-				<div class="saved__infobox--item">
-					<span data-id="2">Amsterdam</span>
-					<a data-id="2" class="close"><img src="../assets/images/icons/cross-button.png"></a>
-				</div>
-
-				<div class="saved__infobox--item">
-					<span data-id="2">Amsterdam</span>
-					<a data-id="2" class="close"><img src="../assets/images/icons/cross-button.png"></a>
-				</div>
-
-				<div class="saved__infobox--item">
-					<span data-id="2">Amsterdam</span>
-					<a data-id="2" class="close"><img src="../assets/images/icons/cross-button.png"></a>
-				</div>
-
+			
 			</div>
 		</div>
 
